--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
     <module>demo-https</module>
     <module>demo-flyway</module>
     <module>demo-pay</module>
+
+
+    <!--    分割线，以下为练习模块    -->
+    <module>my-helloworld</module>
   </modules>
   <packaging>pom</packaging>
 
